test/scc_test/expr/semantic-errors/000.a
000.t:3:5: error: undeclared identifier 'a'